# FancySignatures

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements-dev.txt
.github/workflow/: test.yaml
.github/workflows/: main.yaml  release-test.yaml  release.yaml
changelog/: README.txt
changelog/unreleased/: Add scripts.md  Fix tuple typecaster.md  More generic typecasters.md  README.txt
core/: types.py
docs/: fancy_signatures.html  index.html  search.js
docs/fancy_signatures/: __version__.html  alias.html  api.html  core.html  default.html  exceptions.html  settings.html  typecasting.html  validation.html
fancy_signatures/: __init__.py  __version__.py  alias.py  api.py  exceptions.py  settings.py
fancy_signatures/core/: __init__.py  empty.py  exceptions.py  field.py  interface.py  types.py
fancy_signatures/default/: __init__.py  defaults.py
fancy_signatures/tests/: test_api.py  test_default.py  test_typecast.py
fancy_signatures/typecasting/: __handler_lib.py  __init__.py  aliases.py  casters.py  default.py  factory.py  generic_alias.py  generics.py  generics_alias.py  handlers.py  origins.py  other_types.py  special_origins.py  union.py  user_types.py
fancy_signatures/validation/: __init__.py  mixins.py  related.py  (+1 more)
scripts/: build_docs.sh  compile_release_notes.py
tests/: conftest.py  test_alias.py  test_api.py  test_default.py  test_error_group.py  test_field.py  test_integration.py  test_related.py  test_settings.py  test_validators.py
typecasting/: __init__.py  factory.py  union.py
validation/: __init__.py
(+27 files in other folders)
