[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "FancySignatures"
version = "0.1.2"
authors = [
  { name="Joep Atol", email="joep.atol@live.nl" },
]
description = "Package to leverage standard type hints in function and method signatures."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "typing_extensions>=4.7.1"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: Apache Software License",
]

[project.urls]
"Homepage" = "https://github.com/joepatol/FancySignatures"
"Bug Tracker" = "https://github.com/joepatol/FancySignatures/issues"
"Documentation" = "https://joepatol.github.io/FancySignatures/"